# RWA-solana

gold-token/: Anchor.toml  blacklist-info.json  metadata.json  package-lock.json  package.json  program-keypair.json  redemption-request.json  tsconfig.json
gold-token/new/: admin.json  asset  fee.json  gatekeeper.json  newAsset.json  newSecond.json  newfee.json  newsupply.json  second.json  supply.json  token.json  user2
gold-token/programs/gold-token/: Cargo.toml
gold-token/programs/gold-token/src/: lib.rs
gold-token/programs/transfer-hook-gatekeeper/: Cargo.toml
gold-token/programs/transfer-hook-gatekeeper/src/: lib.rs
gold-token/scripts/: 01-initialize.ts  02-mint-tokens.ts  03-transfer-tokens.ts  04-request-redemption.ts  05-fulfill-redemption.ts  06-cancel-redemption.ts  07-add-to-blacklist.ts  08-remove-from-blacklist.ts  09-wipe-blacklisted-address.ts  10-withdraw-fees.ts  11-toggle-pause.ts  12-update-supply-controller.ts  13-update-asset-protection.ts  14-update-fee-controller.ts  15-update-admin.ts  16-set-redemption-processing.ts  README.md  initialize.ts  mint.ts  test-blacklist-status.ts
gold-token/tests/: gold-token.ts  manualTesting.ts
